<resources>
    <string name="app_name">CityExplorer OSM</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="profile_title">Profil</string>
    <string name="profile_name">Korisnik:</string>
    <string name="profile_points">Poeni:</string>
    <string name="profile_badges">Bedževi</string>
    <string name="open_profile">Otvori profil</string>
    <string name="mark_as_visited">Označi kao posećeno</string>
    <string name="marked_as_visited">Zabeleženo! +poeni</string>

    <string name="visit_pending">Poseta u toku – dovrši verifikaciju</string>
    <string name="visited_ok">Posećeno ✓</string>
    <string name="scan_qr">Skeniraj QR / Unesi kod</string>
    <string name="verify_gps">Verifikuj putem lokacije</string>
    <string name="verified_ok">Uspešno verifikovano! +poeni</string>
    <string name="verified_fail">Verifikacija nije uspela</string>
    <string name="location_unavailable">Lokacija trenutno nije dostupna</string>
    <string name="working_hours_prefix">Radno vreme: %1$s</string>
    <string name="dwell_started">Pokrenuta verifikacija: ostani %1$d s u krugu %2$d m</string>

    <!-- Auth -->
    <string name="email">Email</string>
    <string name="password">Lozinka</string>
    <string name="sign_in">Prijava</string>
    <string name="sign_up">Registracija</string>
    <string name="sign_out">Odjava</string>
    <string name="login_ok">Uspešna prijava</string>
    <string name="register_ok">Nalog kreiran</string>
    <string name="logout_ok">Uspešna odjava</string>
    <string name="firebase_not_configured">Firebase nije podešen – radiš u guest modu</string>
    <string name="delete_local_data">Obriši lokalne podatke</string>
    <string name="local_data_cleared">Lokalni podaci očišćeni</string>
    <string name="consent_analytics">Prihvatam anonimnu analitiku</string>
    <string name="consent_marketing">Prihvatam marketing obaveštenja</string>
    <string name="register_title">Kreiraj nalog</string>
    <string name="first_name">Ime</string>
    <string name="last_name">Prezime</string>
    <string name="username">Korisničko ime</string>
    <string name="username_required">Unesi korisničko ime</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <!-- Notification strings -->
    <string name="notification_place_verified_title">Mesto verifikovano</string>
    <string name="notification_place_verified_body">Uspešno verifikovano: %1$s</string>
    <string name="notification_badge_unlocked_title">Bedž osvojen</string>
    <string name="notification_badge_unlocked_body">Otključan bedž: %1$s</string>
    <string name="notification_sync_done_title">Sinhronizacija završena</string>
    <plurals name="notification_sync_done_body">
        <item quantity="one">%d objekat sinhronizovan</item>
        <item quantity="few">%d objekta sinhronizovana</item>
        <item quantity="other">%d objekata sinhronizovano</item>
    </plurals>

    <!-- Onboarding -->
    <string name="onb_location_title">Lokacija</string>
    <string name="onb_location_desc">Potrebna nam je precizna lokacija da bi mogli da: \n• prikažemo mesta oko tebe\n• verifikujemo posete (GPS)\n• filtriramo preporuke</string>
    <string name="onb_notifications_title">Notifikacije</string>
    <string name="onb_notifications_desc">Koristimo notifikacije da te obavestimo kada: \n• verifikacija posete uspe\n• osvojiš bedž\n• stignu nova mesta</string>
    <string name="onb_status_granted">ODOBRENO</string>
    <string name="onb_status_not_granted">NIJE ODOBRENO</string>
    <string name="onb_btn_location">Dozvoli lokaciju</string>
    <string name="onb_btn_notifications">Dozvoli notifikacije</string>
    <string name="onb_btn_continue">Nastavi</string>
    <string name="onb_skip">Preskoči</string>
    <string name="onb_location_required_short">Lokacija je potrebna za nastavak</string>

    <!-- Multi-step onboarding new strings -->
    <string name="onb_intro_desc">Dobrodošao! Pomoći ćemo ti da pronađeš zanimljiva mesta, beležiš posete i otključavaš bedževe.</string>
    <string name="onb_btn_start">Započni</string>
    <string name="onb_btn_next">Dalje</string>
    <string name="onb_btn_back">Nazad</string>
    <string name="onb_btn_finish">Kreni u aplikaciju</string>
    <string name="onb_btn_fallback_location">Nastavi bez lokacije (ograničeno)</string>
    <string name="onb_mode_limited_active">Ograničen mod – neke funkcije (GPS verifikacija, obližnja mesta) su isključene</string>
    <string name="onb_badges_title">Bedževi</string>
    <string name="onb_badges_desc">Svaka potvrđena poseta donosi poene. Skupljaj ih i otključaj bedževe kao nagradu za istraživanje.</string>

    <!-- Leaderboard and limited-mode related strings -->
    <string name="leaderboard_title">Leaderboard</string>
    <string name="leaderboard_points">poena</string>
    <string name="leaderboard_points_format">%1$d poena</string>
    <string name="leaderboard_empty">Nema dostupnih igrača</string>
    <string name="limited_mode_toast">Ograničen mod: lokacija je isključena</string>

    <!-- Settings and sync status strings -->
    <string name="settings_title">Podešavanja</string>
    <string name="settings_analytics">Anonimna analitika</string>
    <string name="settings_marketing">Marketing obaveštenja</string>
    <string name="settings_copy_fcm">Kopiraj FCM token</string>
    <string name="settings_force_sync">Forsiraj sinhronizaciju</string>
    <string name="settings_reset_onboarding">Reset onboarding</string>
    <string name="settings_clear_local">Obriši lokalne podatke</string>
    <string name="settings_export_user">Export korisničkih podataka</string>
    <string name="sync_starting">Sinhronizacija pokrenuta...</string>
    <string name="sync_done">Sinhronizacija završena</string>
    <string name="sync_failed">Sinhronizacija neuspešna</string>
    <string name="sync_guest_unavailable">Nema sync u guest modu</string>
    <string name="onboarding_reset">Onboarding resetovan</string>
    <string name="clearing_local">Brisanje lokalnih podataka...</string>
    <string name="local_cleared">Lokalni podaci obrisani</string>
    <string name="location_enabled">Lokacija omogućena</string>
    <string name="location_denied">Lokacija odbijena</string>
    <string name="notifications_enabled">Notifikacije omogućene</string>
    <string name="sync_started">Sinhronizacija pokrenuta...</string>
    <string name="sync_error">Greška pri sinhronizaciji</string>
    <string name="opening">Otvaranje</string>
    <string name="enable_location_action">Omogući lokaciju</string>
    <string name="help_hint">Poseti profil za više opcija</string>
    <string name="map_search_hint">Pretraga lokacija</string>
    <string name="map_list_recommended">Preporučeno</string>
    <string name="map_sync_online">Online</string>
    <string name="map_sync_offline">Offline</string>
    <string name="map_progress_placeholder">40%</string>
    <string name="map_refresh_success">Osveženo: %1$d mesta</string>
    <string name="map_refresh_failed">Neuspešno osvežavanje</string>
    <string name="map_empty_list">Nema rezultata</string>

    <!-- Detail strings -->
    <string name="detail_title">Detalji</string>
    <string name="loading_map">Učitavanje mape…</string>
    <string name="loading_details">Učitavanje detalja…</string>
    <string name="place_name_placeholder">Naziv mesta</string>
    <string name="coords_placeholder">Koordinate</string>
    <string name="description_placeholder">Opis mesta</string>
    <string name="favorite_add">Dodaj u favorite</string>
    <string name="favorite_remove">Ukloni iz favorita</string>
</resources>