<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="16dp"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent" android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etFirstName"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etLastName"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etUsername"
            android:hint="@string/username"
            android:inputType="text"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etEmail"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etPassword"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>

        <CheckBox
            android:id="@+id/cbAnalytics"
            android:text="@string/consent_analytics"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>

        <CheckBox
            android:id="@+id/cbMarketing"
            android:text="@string/consent_marketing"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>
